# Magazine-Subscribing-Manage-System

./: CMakeLists.txt
src/: Database.cpp  Database.h  Interface.cpp  Interface.h  Magazine.cpp  Magazine.h  Subscriber.cpp  Subscriber.h  Subscription.cpp  Subscription.h  main.cpp
